<resources>
    <string name="app_name">gastoviagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_liter">Preço por litro</string>
    <string name="autonomy">Autonomia\n</string>
    <string name="autonomy_km">KM por litro</string>
    <string name="calculate">Calcular</string>
    <string name="total_spent">Seu gasto total será de:</string>
    <string name="total_spent_value">R$ 0,00</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
</resources>